; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/isdn/hisax/extr_s0box.c_readreg.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/isdn/hisax/extr_s0box.c_readreg.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@nibtab = common dso_local global i32* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i32, i32)* @readreg to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @readreg(i32 %0, i32 %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  store i32 %0, i32* %4, align 4
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %9 = load i32, i32* %4, align 4
  %10 = add i32 %9, 2
  %11 = call i32 @outb_p(i32 28, i32 %10)
  %12 = load i32, i32* %4, align 4
  %13 = add i32 %12, 2
  %14 = call i32 @outb_p(i32 20, i32 %13)
  %15 = load i32, i32* %5, align 4
  %16 = load i32, i32* %6, align 4
  %17 = add nsw i32 %15, %16
  %18 = or i32 %17, 128
  %19 = load i32, i32* %4, align 4
  %20 = call i32 @outb_p(i32 %18, i32 %19)
  %21 = load i32, i32* %4, align 4
  %22 = add i32 %21, 2
  %23 = call i32 @outb_p(i32 22, i32 %22)
  %24 = load i32, i32* %4, align 4
  %25 = add i32 %24, 2
  %26 = call i32 @outb_p(i32 23, i32 %25)
  %27 = load i32, i32* %4, align 4
  %28 = add i32 %27, 1
  %29 = call i32 @inb_p(i32 %28)
  %30 = ashr i32 %29, 3
  %31 = and i32 %30, 23
  store i32 %31, i32* %7, align 4
  %32 = load i32, i32* %4, align 4
  %33 = add i32 %32, 2
  %34 = call i32 @outb_p(i32 22, i32 %33)
  %35 = load i32, i32* %4, align 4
  %36 = add i32 %35, 1
  %37 = call i32 @inb_p(i32 %36)
  %38 = ashr i32 %37, 3
  %39 = and i32 %38, 23
  store i32 %39, i32* %8, align 4
  %40 = load i32, i32* %4, align 4
  %41 = add i32 %40, 2
  %42 = call i32 @outb_p(i32 20, i32 %41)
  %43 = load i32, i32* %4, align 4
  %44 = add i32 %43, 2
  %45 = call i32 @outb_p(i32 28, i32 %44)
  %46 = load i32*, i32** @nibtab, align 8
  %47 = load i32, i32* %7, align 4
  %48 = sext i32 %47 to i64
  %49 = getelementptr inbounds i32, i32* %46, i64 %48
  %50 = load i32, i32* %49, align 4
  %51 = load i32*, i32** @nibtab, align 8
  %52 = load i32, i32* %8, align 4
  %53 = sext i32 %52 to i64
  %54 = getelementptr inbounds i32, i32* %51, i64 %53
  %55 = load i32, i32* %54, align 4
  %56 = shl i32 %55, 4
  %57 = or i32 %50, %56
  ret i32 %57
}

declare dso_local i32 @outb_p(i32, i32) #1

declare dso_local i32 @inb_p(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
